# VersaLog.py

./: .all-contributorsrc  CONTRIBUTING.md  LICENSE  README-en.md  README.md  pyproject.toml  setup.py
.github/workflows/: github.yml  publish.yml
VersaLog/: __init__.py  core.py  handler.py  logger.py
VersaLog.egg-info/: PKG-INFO
VersaLog/integrations/: auto.py  django.py  fastapi.py  flask.py  generic.py
examples/: api_req.py  django_log.py  fastapi_log.py  flask_log.py
sample/: detailed_test.py  file_test.py  log_save_test.py  simple2_test.py  simple_test.py
tests/: detailed_test.py  file_test.py  simple2_test.py  simple_test.py
