[project]
name = "VersaLog"
version = "1.1.0"
description = "A cool logger library"
authors = [
  { name = "kayu0514"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["VersaLog"]